Updates to newer format.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 <head>
 
     <meta charset="utf-8">
@@ -77,42 +77,67 @@
     Header
 </header>
 
-<div id="content">
-    <section>
-        <ul>
-            <li>
-                <div class="ambiveo--container">
-                    <video
-                            autoplay
-                            loop
-                            muted
-                            playsinline
-                            class="ambiveo"
-                            data-source-main="video/fever-dream-full.mp4"
-                            data-source-image="img/video/tbd.jpg">
-                    </video>
+<div id="content" class="slide-show-wrapper slide-show-active">
+    <section class="slide-show-container">
+        <ul class="slide-show">
+            <li data-background="slide-01.jpg" data-index="0">
+                <h1>Slide One</h1>
+                <p>Lorem Ipsum</p>
+            </li>
+            <li data-background="slide-02.jpg" data-index="1">
+                <h1>Slide Two</h1>
+                <p>Lorem Ipsum</p>
+
+            </li>
+            <li data-background="slide-03.jpg" data-index="2">
+                <h1>Slide Three</h1>
+                <p>Lorem Ipsum</p>
+
+            </li>
+            <li data-background="slide-04.jpg" data-index="3">
+                <h1>Slide Four</h1>
+                <p>Lorem Ipsum</p>
+
+            </li>
+            <li data-background="slide-05.jpg" data-index="4">
+                <h1>Slide Five</h1>
+                <p>Lorem Ipsum</p>
+
+            </li>
+            <li data-background="slide-06.jpg" data-index="5">
+                <h1>Slide Six</h1>
+                <p>Lorem Ipsum</p>
+
+            </li>
+            <li data-background="slide-07.jpg" data-index="6">
+                <h1>Slide Seven</h1>
+                <p>Lorem Ipsum</p>
+
             </li>
         </ul>
     </section>
     <section>
-        About
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section>
-        Video Bit
+        <h2>Video Bit</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section>
-        Our Team
+        <h2>Our Team</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section>
-        Everything We Do
+        <h2>Everything We Do</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section>
-        Contact
+        <h2>Contact</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section>
-        Social
-    </section>
-    <div id="back-to-top" class="back-to-top hidden"></div>
+        <div id="back-to-top" class="back-to-top hidden"></div>
 </div>
 
 <footer>
@@ -124,6 +149,8 @@
 <script src="js/vendor/underscore-min.js"></script>
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/lazyload.transpiled.min.js"></script>
+<script src="js/Ambiveo.js"></script>
+<script src="js/Slider.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
