--- a/src/index.html
+++ b/src/index.html
@@ -80,36 +80,36 @@
 <div id="content" class="slide-show-wrapper slide-show-active">
     <section class="slide-show-container">
         <ul class="slide-show">
-            <li data-background="slide-01.jpg" data-index="0">
+            <li class="slide" data-background="slide-01.jpg" data-index="0">
                 <h1>Slide One</h1>
                 <p>Lorem Ipsum</p>
             </li>
-            <li data-background="slide-02.jpg" data-index="1">
+            <li class="slide" data-background="slide-02.jpg" data-index="1">
                 <h1>Slide Two</h1>
                 <p>Lorem Ipsum</p>
 
             </li>
-            <li data-background="slide-03.jpg" data-index="2">
+            <li class="slide" data-background="slide-03.jpg" data-index="2">
                 <h1>Slide Three</h1>
                 <p>Lorem Ipsum</p>
 
             </li>
-            <li data-background="slide-04.jpg" data-index="3">
+            <li class="slide" data-background="slide-04.jpg" data-index="3">
                 <h1>Slide Four</h1>
                 <p>Lorem Ipsum</p>
 
             </li>
-            <li data-background="slide-05.jpg" data-index="4">
+            <li class="slide" data-background="slide-05.jpg" data-index="4">
                 <h1>Slide Five</h1>
                 <p>Lorem Ipsum</p>
 
             </li>
-            <li data-background="slide-06.jpg" data-index="5">
+            <li class="slide" data-background="slide-06.jpg" data-index="5">
                 <h1>Slide Six</h1>
                 <p>Lorem Ipsum</p>
 
             </li>
-            <li data-background="slide-07.jpg" data-index="6">
+            <li class="slide" data-background="slide-07.jpg" data-index="6">
                 <h1>Slide Seven</h1>
                 <p>Lorem Ipsum</p>
 
