Massive refactor to get the gallery working correctly. Migrated the gallery to an iframe for correct scroll effect.

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     </nav>
     <nav id="headerMenu" class="headerMenu" style="display: none;">
         <div class="headerMenu__controls">
-            <img id="menuClose" src="img/close-x.svg" class="menuClose viewControl"/>
+            <img id="menuClose" src="img/close-x-black.svg" class="menuClose viewControl"/>
             <img src="img/sr-logo-black.svg" class="headerLogo"/>
         </div>
         <ul class="headerMenu__choices">
@@ -103,49 +103,9 @@
     </nav>
 </header>
 
-</div>
-
 <div id="content" class="slide-show-wrapper slide-show-active">
     <section id="Video" class="slide-show-container">
-        <ul class="slide-show">
-            <li class="slide" data-background="slide-01.jpg" data-index="0">
-                <a href="#" data-url="https://player.vimeo.com/video/207580033"
-                   data-title="Sir Rosevelt Take Your Love Away">
-                <h3>Sir Rosevelt</h3>
-                <p>Take Your Love Away</p>
-                </a>
-            </li>
-            <li class="slide" data-background="slide-02.jpg" data-index="1">
-                <h1>Slide Two</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-            <li class="slide" data-background="slide-03.jpg" data-index="2">
-                <h1>Slide Three</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-            <li class="slide" data-background="slide-04.jpg" data-index="3">
-                <h1>Slide Four</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-            <li class="slide" data-background="slide-05.jpg" data-index="4">
-                <h1>Slide Five</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-            <li class="slide" data-background="slide-06.jpg" data-index="5">
-                <h1>Slide Six</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-            <li class="slide" data-background="slide-07.jpg" data-index="6">
-                <h1>Slide Seven</h1>
-                <p>Lorem Ipsum</p>
-
-            </li>
-        </ul>
+        <iframe src="iframe.html" style="width: 100vw;height:100vh;border:none;"></iframe>
     </section>
     <section id="Photography">
         <h2>Photography</h2>
@@ -205,7 +165,6 @@
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/lazyload.transpiled.min.js"></script>
 <script src="js/Ambiveo.js"></script>
-<script src="js/Slider.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
