--- a/src/index.html
+++ b/src/index.html
@@ -73,16 +73,8 @@
 </script>
 <!-- END FB SDK -->
 
-<header>
-    <nav class="headerNav">
-        <img id="hamburger" src="img/hamburger.svg" class="headerHamburger viewControl"/>
-        <img src="img/sr-logo.svg" class="headerLogo"/>
-    </nav>
+<header id="southern-reel__header">
     <nav id="headerMenu" class="headerMenu" style="display: none;">
-        <div class="headerMenu__controls">
-            <img id="menuClose" src="img/close-x-black.svg" class="menuClose viewControl"/>
-            <img src="img/sr-logo-black.svg" class="headerLogo"/>
-        </div>
         <ul class="headerMenu__choices">
             <li><a href="#Video" class="headerMenu__internalLink">Video</a></li>
             <li><a href="#Photography" class="headerMenu__internalLink">Photography</a></li>
@@ -99,13 +91,58 @@
                 </ul>
             </li>
         </ul>
+    </nav>
+    <nav class="headerNav">
+
+        <svg id="southern-reel__hamburger" viewBox="0 0 40 40" class="headerHamburger viewControl light">
+            <path id="header__close"
+                  d="M37.7,4.4l-2.1-2.1L20,17.9L4.6,2.5L2.5,4.6L17.9,20L2.3,35.6l2.1,2.1L20,22.1l15.4,15.4l2.1-2.1L22.1,20"/>
+            <path id="header__hamburger"
+                  d="M2.5,7.5v2.3h35V7.5H2.5z M2.5,21.6h35v-2.3h-35V21.6z M2.5,32.5h35v-2.3h-35V32.5z"/>
+        </svg>
+
+        <svg id="southern-reel__logo" viewBox="0 0 325 66" class="headerLogo light">
+            <path d="M80,40.9v6.4h4V35.4h-5.6c-1.8,0-3.2-1.5-3.2-3.1v-14c0-1.8,1.3-3.2,3.2-3.2h7.2c1.8,0,3.2,1.3,3.2,3.1v7.7h-4.7v-6.1h-4
+	v10.7h5.6c1.8,0,3.2,1.5,3.2,3.2v15.1c0,1.7-1.4,3.1-3.2,3.1h-7.2c-1.7,0-3.2-1.4-3.2-3.1v-8L80,40.9L80,40.9z M96.9,18.4
+	c0-1.7,1.5-3.2,3.2-3.2h7.2c1.8,0,3.2,1.5,3.2,3.2V49c0,1.7-1.4,3.1-3.2,3.1h-7.2c-1.7,0-3.2-1.4-3.2-3.1V18.4z M105.6,19.9h-4v27.4
+	h4V19.9z M123.3,15.2v32.1h4V15.2h4.7V49c0,1.7-1.4,3.1-3.2,3.1h-7.2c-1.7,0-3.2-1.4-3.2-3.1V15.2C118.4,15.2,123.3,15.2,123.3,15.2
+	z M142.8,19.9h-4.2v-4.7h13.2v4.7h-4.2V52h-4.7V19.9H142.8z M158.4,15.2h4.7v17h4v-17h4.7v36.9h-4.7v-15h-4v15.1h-4.7
+	C158.4,52.2,158.4,15.2,158.4,15.2z M192.2,52.1H180V15.2h11.9v4.7h-7.1v10.2h5v4.7h-5v12.5h7.5L192.2,52.1L192.2,52.1z M208.6,36.4
+	h-4V52h-4.7V15.2h9.7c1.8,0,3.2,1.5,3.2,3.2v12.9c0,1.3-0.7,2.3-1.6,2.6c1.4,0.3,2.2,1.8,2.2,3.1v15.2h-4.7L208.6,36.4L208.6,36.4z
+	 M204.6,31.8h3.4V20.1h-3.4C204.6,20.1,204.6,31.8,204.6,31.8z M227,15.2l4.5,18.3V15.2h4.7v36.9h-5.6l-4.7-19.8v19.8h-4.7V15.3
+	L227,15.2z M262.3,36.4h-4V52h-4.8V15.2h9.7c1.8,0,3.2,1.5,3.2,3.2v12.9c0,1.3-0.7,2.3-1.6,2.6c1.4,0.3,2.2,1.8,2.2,3.1v15.2h-4.7
+	V36.4z M258.3,31.8h3.4V20.1h-3.4C258.3,20.1,258.3,31.8,258.3,31.8z M287.2,52.1H275V15.2h11.9v4.7h-7.1v10.2h5v4.7h-5v12.5h7.5
+	L287.2,52.1L287.2,52.1z M307,52.1h-12.2V15.2h11.9v4.7h-7.2v10.2h5v4.7h-5v12.5h7.5L307,52.1L307,52.1z M314.7,15.2h4.7v32.1h5.6
+	V52h-10.3L314.7,15.2L314.7,15.2z"/>
+            <path d="M15.7,16.9v9.3H4.9v-21h26.4v9.3h4.8V0.4H0V31h31.2v8.5H20.6v-6h-4.8v10.9h38.3V17.1H15.7V16.9z M49.2,39.6H36.1V26.2H20.6
+		v-4.4h28.6V39.6z"/>
+            <path d="M31.2,52.1H20.6v-5.3h-4.9v5.3H4.9V39.6H0v17.3h36.1V46.8h-4.9L31.2,52.1z M15.7,59.2h4.8v6.3h-4.8V59.2z M43.2,46.8h-5.6
+		l10.8,18.8H54L43.2,46.8z M56.4,27.1v8l6.8,1.2V25.9C63.3,25.9,56,27.1,56.4,27.1z"/>
+        </svg>
 
     </nav>
 </header>
 
-<div id="content" class="slide-show-wrapper slide-show-active">
-    <section id="Video" class="slide-show-container">
-        <iframe src="iframe.html" style="width: 100vw;height:100vh;border:none;"></iframe>
+<div id="content" class="slide-show--active">
+    <section id="Video" class="slide-show__container">
+        <iframe id="slide-show-iframe" src="iframe.html" class="slide-show__iframe"
+                data-slide-count="{{projects.length}}"></iframe>
+        <ul id="mobile-gallery" class="slide-show hidden">
+            {% for project in projects %}
+            <li class="mobile-gallery--slide"
+                data-index="{{loop.index}}">
+                <div class="mobile-gallery--slide__background" style="background-image:url(../img/slides/{{project.image}})"></div>
+                <div class="mobile-gallery--slide__copy" data-url="{{project.video}}" data-title="{{project.title}}">
+                    <div class="mobile-gallery--slide__description">
+                        {% for copy in project.copy %}
+                        <p>{{copy}}</p>
+                        {% endfor %}
+                    </div>
+                    <span class="mobile-gallery--slide__watchNow">Watch Now</span>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
     </section>
     <section id="Photography">
         <h2>Photography</h2>
