--- a/src/index.html
+++ b/src/index.html
@@ -125,13 +125,13 @@
 
 <div id="content" class="slide-show--active">
     <section id="Video" class="slide-show__container">
-        <iframe id="slide-show-iframe" src="iframe.html" class="slide-show__iframe"
+        <iframe id="slide-show-iframe" data-url="{{iframeUrl}}" class="slide-show__iframe"
                 data-slide-count="{{projects.length}}"></iframe>
         <ul id="mobile-gallery" class="slide-show hidden">
             {% for project in projects %}
             <li class="mobile-gallery--slide"
                 data-index="{{loop.index}}">
-                <div class="mobile-gallery--slide__background" style="background-image:url(../img/slides/{{project.image}})"></div>
+                <div class="mobile-gallery--slide__background" data-background-image="../img/slides/{{project.image}}"></div>
                 <div class="mobile-gallery--slide__copy" data-url="{{project.video}}" data-title="{{project.title}}">
                     <div class="mobile-gallery--slide__description">
                         {% for copy in project.copy %}
