--- a/src/iframe.html
+++ b/src/iframe.html
@@ -13,11 +13,9 @@
             data-index="{{loop.index}}"
             style="z-index:{{loop.revindex}};opacity={% if loop.index === 1 %}1{% else %}0{% endif %}">
             <div class="slide__background" style="background-image:url(../img/slides/{{project.image}})"></div>
-            <div class="slide__copy" data-url="{{project.video}}" data-title="{{project.title}}">
+            <div class="slide__copy" data-url="{{project.video}}" data-title="{{project.copy.title}}" data-subtitle="{{project.copy.subtitle}}">
                 <div class="slide__description">
-                    {% for copy in project.copy %}
-                    <p>{{copy}}</p>
-                    {% endfor %}
+                    <p>{{project.copy.title}}</p>
                 </div>
                 <span class="slide__watchNow">Watch Now</span>
             </div>
