--- a/src/index.html
+++ b/src/index.html
@@ -131,8 +131,10 @@
             {% for project in projects %}
             <li class="mobile-gallery--slide"
                 data-index="{{loop.index}}">
-                <div class="mobile-gallery--slide__background" data-background-image="../img/slides/{{project.image}}"></div>
-                <div class="mobile-gallery--slide__copy" data-url="{{project.video}}" data-title="{{project.copy.title}}" data-subtitle="{{project.copy.subtitle}}">
+                <div class="mobile-gallery--slide__background"
+                     data-background-image="../img/slides/{{project.image}}"></div>
+                <div class="mobile-gallery--slide__copy" data-url="{{project.video}}"
+                     data-title="{{project.copy.title}}" data-subtitle="{{project.copy.subtitle}}">
                     <div class="mobile-gallery--slide__description">
                         <p>{{project.copy.title}}</p>
                     </div>
