--- a/src/index.html
+++ b/src/index.html
@@ -161,8 +161,36 @@
             anim id est laborum.</p>
     </section>
     <section id="About">
-        <h2>About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <img class="about__logo" src="img/sr-skull.svg"/>
+        <div class="about__description">
+            Curated by Grammy Award-winning artist&nbsp;Zac&nbsp;Brown,<br/>
+            Southern Reel is a state-of-the-art creative agency specializing in
+        </div>
+        <div class="crawl__container clearfix">
+            <ul class="crawl">
+                <li>
+                    <div class="crawl__background"></div>
+                    Film Production
+                </li>
+                <li>
+                    <div class="crawl__background"></div>
+                    Photography
+                </li>
+                <li>
+                    <div class="crawl__background"></div>
+                    Graphic Design
+                </li>
+                <li>
+                    <div class="crawl__background"></div>
+                    Content Strategy
+                </li>
+                <li>
+                    <div class="crawl__background"></div>
+                    Social Media
+                </li>
+            </ul>
+        </div>
+        <p class="clearfix">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
