--- a/src/index.html
+++ b/src/index.html
@@ -181,42 +181,37 @@
             Southern Reel is a state-of-the-art creative agency specializing in
         </div>
         <div class="crawl__container clearfix">
-            <ul class="crawl">
-                <li>
-                    <div class="crawl__background"></div>
-                    Film Production
-                </li>
-                <li>
-                    <div class="crawl__background"></div>
-                    Photography
-                </li>
-                <li>
-                    <div class="crawl__background"></div>
-                    Graphic Design
-                </li>
-                <li>
-                    <div class="crawl__background"></div>
-                    Content Strategy
-                </li>
-                <li>
-                    <div class="crawl__background"></div>
-                    Social Media
-                </li>
-            </ul>
+            <div class="crawl__container__background">
+                <ul class="crawl">
+                    {% for capability in about.capabilities %}
+                    <li>
+                        {{capability}}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-        <p class="clearfix">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        {% for item in about.content %}
+        <div class="about__item">
+            <div class="about__item--title">{{item.title}}</div>
+            <div class="about__item--copy">{{item.copy | safe}}</div>
+        </div>
+        {% endfor %}
     </section>
     <section id="OurTeam">
-        <h2>Our Team</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        <h2>Team</h2>
+        <ul class="team-members">
+            {% for member in team %}
+            <li>
+                <span class="team-member__name">
+                    {{member.name}}
+                </span><br/>
+                <span class="team-member__title">
+                    {{member.title}}
+                </span>
+            </li>
+            {% endfor %}
+        </ul>
     </section>
     <section id="Contact">
         <h2>Contact</h2>
