Removes Photography heading as it's not in the comps.

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
         </ul>
     </section>
     <section id="Photography">
-        <h2>Photography</h2>
+        <!-- <h2>Photography</h2> -->
         <div class="photo-carousel__container">
             <svg id="photo-carousel__next"
                  class="photo-carousel__control photo-carousel__control--prev"
