Contact section build.

--- a/src/index.html
+++ b/src/index.html
@@ -226,11 +226,30 @@
     </section>
     <section id="Contact">
         <h2>Contact</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        <div>
+            <h3>Southern Reel</h3>
+
+            <address>
+                101 Gardner Parkway<br/>
+                Peachtree City, GA 30269
+            </address>
+
+            <div class="contact__telephone">
+                <span class="bold">Tel: </span><a href="tel:404.941.3480">(404) 941-3480</a>
+            </div>
+
+            <div class="contact__map">
+                <a href="https://www.google.com/maps/place/101+Gardner+Park,+Peachtree+City,+GA+30269/@33.3549604,-84.5587062,17z/data=!3m1!4b1!4m5!3m4!1s0x88f4eb04f14b7f63:0xa4ee910d5b13ddbf!8m2!3d33.3549604!4d-84.5565175"
+                   target="_blank">Map</a>
+            </div>
+
+            <ul class="contact__social">
+                <li><a href="{{social.facebook}}" target="_blank" class="contact__social--facebook">Facebook</a></li>
+                <li><a href="{{social.instagram}}" target="_blank" class="contact__social--instagram">Instagram</a></li>
+                <li><a href="{{social.vimeo}}" target="_blank" class="contact__social--vimeo">Vimeo</a></li>
+                <li><a href="{{social.twitter}}" target="_blank" class="contact__social--twitter">Twitter</a></li>
+            </ul>
+        </div>
     </section>
     <div id="back-to-top" class="back-to-top hidden"></div>
 </div>
