Restructures contact page per Shivani's instruction.

--- a/src/index.html
+++ b/src/index.html
@@ -229,21 +229,25 @@
     </section>
     <section id="Contact">
         <h2>Contact</h2>
-        <div>
+        <img src="img/sr-skull.svg" class="contact__logo"  />
+        <div class="contact">
             <h3>Southern Reel</h3>
 
+            <div class="contact__email">
+                <a href="mailto:info@southernreel.com">info&copy;southernreel.com</a>
+            </div>
             <address>
                 101 Gardner Parkway<br/>
                 Peachtree City, GA 30269
             </address>
 
-            <div class="contact__telephone">
-                <span class="bold">Tel: </span><a href="tel:404.941.3480">(404) 941-3480</a>
-            </div>
-
             <div class="contact__map">
                 <a href="https://www.google.com/maps/place/101+Gardner+Park,+Peachtree+City,+GA+30269/@33.3549604,-84.5587062,17z/data=!3m1!4b1!4m5!3m4!1s0x88f4eb04f14b7f63:0xa4ee910d5b13ddbf!8m2!3d33.3549604!4d-84.5565175"
                    target="_blank">Map</a>
+            </div>
+
+            <div class="contact__telephone">
+                <a href="tel:404.941.3480">(404) 941-3480</a>
             </div>
 
             <ul class="contact__social">
