Removes skull logo. Moved down to the Contact section.

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
             anim id est laborum.</p>
     </section>-->
     <section id="About">
-        <img class="about__logo" src="img/sr-skull.svg"/>
+        <h2>About Us</h2>
         <div class="about__description">
             Curated by Grammy Award-winning artist&nbsp;Zac&nbsp;Brown,<br/>
             Southern Reel is a state-of-the-art creative agency specializing in
