--- a/src/iframe.html
+++ b/src/iframe.html
@@ -16,8 +16,7 @@
             <div class="slide__copy"
                  data-url="{{project.video}}"
                  data-title="{{project.copy.title|safe}}" data-subtitle="{{project.copy.subtitle|safe}}"
-                 data-aspect-ratio="{{project.aspectRatio}}"
-            >
+                 {% if project.aspectRatio %}data-aspect-ratio="{{project.aspectRatio}}"{% endif %}>
                 <div class="slide__description">
                     {{project.title|safe}}
                 </div>
