Adds randomizer to the Nunjucks render. Appends frequently changing script and CSS sources with guild IDs for cache busting.

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="css/vendor/normalize.css">
     <link rel="stylesheet" href="css/vendor/Genericons.css">
     <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?id={{guid()}}">
 
     <script src="js/vendor/modernizr-custom.js"></script>
 
@@ -265,8 +265,8 @@
 <script src="js/vendor/underscore-min.js"></script>
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/lazyload.transpiled.min.js"></script>
-<script src="js/Ambiveo.js"></script>
-<script src="js/main.js"></script>
+<script src="js/Ambiveo.js?id={{guid()}}"></script>
+<script src="js/main.js?id={{guid()}}"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
