--- a/src/index.html
+++ b/src/index.html
@@ -161,21 +161,25 @@
         <div class="photo-carousel__container">
             <svg id="photo-carousel__prev"
                  class="photo-carousel__control photo-carousel__control--prev"
-                 viewBox="0 0 30 50">
-                <polygon points="0,3 3.3,0 30,25 3.3,50 0,47 23.4,25 "/>
+                 viewBox="0 0 46.67 46.67">
+                <defs><style>.cls-1{fill:#ededed;}</style></defs>
+                <rect class="cls-1" width="46.67" height="46.67"/>
+                <polygon points="11.79 6.39 14.32 4.1 34.87 23.33 14.32 42.56 11.79 40.28 29.82 23.33 11.79 6.39"/>
             </svg>
             <ul class="photo-carousel">
                 {% for photo in photography %}
-                <li class="photo-carousel__item{% if loop.index === 1 %} active{% endif %}" data-index="{{loop.index0}}">
-                    <img class="photo-carousel__image"
-                         data-original="{{photo.image}}" />
+                <li class="photo-carousel__item{% if loop.index === 1 %} active{% endif %}" data-index="{{loop.index0}}" data-image="{{photo.image}}">
+                    <!--<img class="photo-carousel__image"
+                         data-original="{{photo.image}}" />-->
                 </li>
                 {% endfor %}
             </ul>
             <svg id="photo-carousel__next"
                  class="photo-carousel__control photo-carousel__control--next"
-                 viewBox="0 0 30 50">
-                <polygon points="0,3 3.3,0 30,25 3.3,50 0,47 23.4,25 "/>
+                 viewBox="0 0 46.67 46.67">
+                <defs><style>.cls-1{fill:#ededed;}</style></defs>
+                <rect class="cls-1" width="46.67" height="46.67"/>
+                <polygon points="11.79 6.39 14.32 4.1 34.87 23.33 14.32 42.56 11.79 40.28 29.82 23.33 11.79 6.39"/>
             </svg>
         </div>
     </section>
