--- a/src/index.html
+++ b/src/index.html
@@ -98,8 +98,7 @@
                            class="headerMenu__social--instagram">Instagram</a>
                     </li>
                     <li><a href="{{social.vimeo}}" target="_blank" class="headerMenu__social--vimeo">Vimeo</a></li>
-                    <li><a href="{{social.twitter}}" target="_blank" class="headerMenu__social--twitter">Twitter</a>
-                    </li>
+                    <!--<li><a href="{{social.twitter}}" target="_blank" class="headerMenu__social&#45;&#45;twitter">Twitter</a></li>-->
                 </ul>
             </li>
         </ul>
@@ -111,7 +110,6 @@
             <path id="header__hamburger"
                   d="M2.5,7.5v2.3h35V7.5H2.5z M2.5,21.6h35v-2.3h-35V21.6z M2.5,32.5h35v-2.3h-35V32.5z"/>
         </svg>
-
         <svg id="southern-reel__logo" viewBox="0 0 325 66" class="headerLogo light">
             <path d="M80,40.9v6.4h4V35.4h-5.6c-1.8,0-3.2-1.5-3.2-3.1v-14c0-1.8,1.3-3.2,3.2-3.2h7.2c1.8,0,3.2,1.3,3.2,3.1v7.7h-4.7v-6.1h-4
 	v10.7h5.6c1.8,0,3.2,1.5,3.2,3.2v15.1c0,1.7-1.4,3.1-3.2,3.1h-7.2c-1.7,0-3.2-1.4-3.2-3.1v-8L80,40.9L80,40.9z M96.9,18.4
@@ -130,7 +128,6 @@
             <path d="M31.2,52.1H20.6v-5.3h-4.9v5.3H4.9V39.6H0v17.3h36.1V46.8h-4.9L31.2,52.1z M15.7,59.2h4.8v6.3h-4.8V59.2z M43.2,46.8h-5.6
 		l10.8,18.8H54L43.2,46.8z M56.4,27.1v8l6.8,1.2V25.9C63.3,25.9,56,27.1,56.4,27.1z"/>
         </svg>
-
     </nav>
 </header>
 <div id="content" class="slide-show--active">
@@ -249,7 +246,7 @@
                 <li><a href="{{social.facebook}}" target="_blank" class="contact__social--facebook">Facebook</a></li>
                 <li><a href="{{social.instagram}}" target="_blank" class="contact__social--instagram">Instagram</a></li>
                 <li><a href="{{social.vimeo}}" target="_blank" class="contact__social--vimeo">Vimeo</a></li>
-                <li><a href="{{social.twitter}}" target="_blank" class="contact__social--twitter">Twitter</a></li>
+                <!--<li><a href="{{social.twitter}}" target="_blank" class="contact__social&#45;&#45;twitter">Twitter</a></li>-->
             </ul>
         </div>
     </section>
