Adds the social media image to the html files.

--- a/src/error.html
+++ b/src/error.html
@@ -22,7 +22,7 @@
     <!-- for Facebook -->
     <meta property="og:title" content="Southern Reel"/>
     <meta property="og:type" content="profile"/>
-    <meta property="og:image" content="http://southernreel.com/img/social/facebook.jpg"/>
+    <meta property="og:image" content="{{social.socialMediaImage}}"/>
     <meta property="og:url" content="http://southernreel.com"/>
     <meta property="og:description"
           content=""/>
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="Southern Reel"/>
     <meta name="twitter:description"
           content=""/>
-    <meta name="twitter:image" content="http://southernreel.com/img/social/twitter.jpg"/>
+    <meta name="twitter:image" content="{{social.socialMediaImage}}"/>
 
     <!-- for Google -->
     <link rel='author' href='https://plus.google.com/u/0/103429485426405859499/'/>
