Updates page title.

--- a/src/iframe.html
+++ b/src/iframe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Southern Reel Gallery iFrame</title>
 </head>
 <link rel="stylesheet" href="css/main.css" />
 <body>
